Add: A01 & fix it

--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -3,4 +3,6 @@
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Register</button>
+
+  <p>Already have an account? <a href="{% url 'login' %}">Login here</a>.</p>
 </form>
