--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -3,4 +3,6 @@
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Login</button>
+
+  <p>Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
 </form>
