--- a/core/templates/upload_photo.html
+++ b/core/templates/upload_photo.html
@@ -5,8 +5,7 @@
   <button type="submit">Upload</button>
 </form>
 
-<!-- A10:2021 – Server-Side Request Forgery (SSRF):
-  This is only a client-side validation -->
+<!-- A04: Insecure Design -->
 <script>
     function validateFile() {
         var fileInput = document.getElementById("id_image");
